--- a/Api_Kim/project/appsettings.json
+++ b/Api_Kim/project/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DEKNESLO;Database=CharityDB;User Id=sa;Password=SecureP@ssw0rd123;"
+    "DefaultConnection": "Server=DEKNESLO;Database=CharityDB;User Id=sa;Password=SecureP@ssw0rd123; TrustServerCertificate=true"
   }
 }
