--- a/Api_Kim/docker-compose.yml
+++ b/Api_Kim/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ASPNETCORE_URLS=http://+:5000
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Server=db;Database=CharityDB;User=sa;Password=SecureP@ssw0rd123;MultipleActiveResultSets=True
+      #- ConnectionStrings__DefaultConnection=Server=sql.bsite.net,1433;Database=dekneslo_;User=dekneslo_;Password=SecureP@ssw0rd123;MultipleActiveResultSets=True
     ports:
       - "5000:5000"
     depends_on:
@@ -21,3 +22,4 @@ services:
       - SA_PASSWORD=SecureP@ssw0rd123
       - ACCEPT_EULA=Y
     container_name: mssql
+    
