--- a/Api_Kim/docker-compose.yml
+++ b/Api_Kim/docker-compose.yml
@@ -1,25 +1,34 @@
-version: '3.4'
+version: '3.8'
 
 services:
-  webapi:
-    image: ${DOCKER_REGISTRY-}webapi
+  project:
     build:
-      context: .
-      dockerfile: ./Dockerfile.dockerfile
-    environment:
-      - ASPNETCORE_URLS=http://+:5000
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=db;Database=CharityDB;User=sa;Password=SecureP@ssw0rd123;MultipleActiveResultSets=True
-      #- ConnectionStrings__DefaultConnection=Server=sql.bsite.net,1433;Database=dekneslo_;User=dekneslo_;Password=SecureP@ssw0rd123;MultipleActiveResultSets=True
+      context: ..  
+      dockerfile: project/Dockerfile  
     ports:
-      - "5000:5000"
-    depends_on:
-      - db
+      - "5266:80"  
+      - "7042:443" 
 
-  db:
-    image: mcr.microsoft.com/mssql/server
+    environment:
+      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=CharityDB;User Id=sa;Password=SecureP@ssw0rd123;TrustServerCertificate=true
+
+    depends_on:
+      - sqlserver
+    
+
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
       - SA_PASSWORD=SecureP@ssw0rd123
       - ACCEPT_EULA=Y
-    container_name: mssql
-    
+    expose:
+      - "5321"
+    ports:
+      - "5321:5321"
+    volumes:
+      - sql_data:/var/opt/mssql
+
+
+
+volumes:
+  sql_data:
