--- a/Api_Kim/Dockerfile
+++ b/Api_Kim/Dockerfile
@@ -6,17 +6,27 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["project/project.csproj", "./"]
-COPY ["BusinessLogic/BusinessLogic.csproj", "../BusinessLogic/"]
-COPY ["Domain/Domain.csproj", "../Domain/"]
-COPY ["DataAccess/DataAccess.csproj", "../DataAccess/"]
+
+# Копируем только файлы проекта
+COPY ["project/project.csproj", "project/"]
+COPY ["BusinessLogic/BusinessLogic.csproj", "BusinessLogic/"]
+COPY ["Domain/Domain.csproj", "Domain/"]
+COPY ["DataAccess/DataAccess.csproj", "DataAccess/"]
+
+# Восстанавливаем зависимости
 RUN dotnet restore "project/project.csproj"
-COPY project/. .
-WORKDIR "/src/"
+
+# Копируем остальные файлы из папки `solution`
+COPY . .
+
+# Собираем проект
+WORKDIR "/src/project"
 RUN dotnet build "project.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
+
+# Публикуем проект
 RUN dotnet publish "project/project.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
