--- a/Api_Kim/Dockerfile
+++ b/Api_Kim/Dockerfile
@@ -27,7 +27,7 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 
 # Публикуем проект
-RUN dotnet publish "project/project.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "project.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
