--- a/Api_Kim/project/appsettings.json
+++ b/Api_Kim/project/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DEKNESLO;Database=CharityDB;User Id=sa;Password=SecureP@ssw0rd123; TrustServerCertificate=true"
+    "DefaultConnection": "Server=sql.bsite.net\MSSQL2016; Database=dekneslo_; User Id=dekneslo_; Password=SecureP@ssw0rd123";
   }
 }
